# audio_neuro_mod

./: .gitmodules  CMakeLists.txt  README.md
Source/: Carrier.cpp  Carrier.h  EegScopeComponent.h  MidiOutputLayer.cpp  MidiOutputLayer.h  OutputSyncLayer.cpp  OutputSyncLayer.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dsp_worker.cpp  dsp_worker.h  filterMod.h  lcl_connector.h  macros.h
Source/dsp/: AudioEngine.cpp  AudioEngine.h  CFIRFilter.cpp  CFIRFilter.h  Carrier.cpp  Carrier.h  RunningPercentile.h  dsp_worker.cpp  dsp_worker.h  filterMod.cpp  filterMod.h  simpleProfiler.h
Source/lsl/: EegFIFO.h  EegRingBuf.h  eegRingBuffer.h  eegTypes.h  lookBackBuffer.h  lsl_connector.h  lsl_worker.h  timestampMapper.cpp  timestampMapper.h
Source/ui/: EegScopeComponent.h
